# webscale

./: .gitignore  Cargo.toml  Dockerfile  README.md  patterns_template.txt  updater.sh  webscale_template.conf  webscale_template.json
config/: webscale.toml
src/: main.rs  serde_types.in.rs
src/webscale/: config.rs  mod.rs  plugin.rs  session.rs
tests/: webscale.toml
webscale_plugin/: Cargo.toml
webscale_plugin/src/: lib.rs
webscale_plugin/tests/: Cargo.toml  lib.rs
